added desktop view

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         adipisicing elit. Sapiente a nulla odio possimus vel quibusdam dolores
         molestias, ipsum, pariatur, suscipit amet dolore accusantium.
       </p>
-      <button class="rules__button">Start/Next</button>
+      <button class="rules__button">Let's Play!</button>
     </section>
     <section class="question">
       <div class="question-container">
@@ -30,8 +30,10 @@
     </section>
     <section class="answers">
       <div class="answers-container">
-        <p class="answers-container__score">Your total score: 5/10 points</p>
-        <p class="answers-container__pop-up">2 points for the last guess</p>
+        <p class="answers-container__total-score">
+          Your total score: 5/10 points
+        </p>
+        <p class="answers-container__last-score">2 points for the last guess</p>
         <button class="answers-container__answer">A</button>
         <button class="answers-container__answer">B</button>
         <button class="answers-container__answer">C</button>
