--- a/index.html
+++ b/index.html
@@ -20,24 +20,25 @@
     </section>
     <section class="question">
       <div class="question-container">
-        <div class="question-container__image">
+        <!-- <div class="question-container__image">
           <img src="#" alt="#" class="question-container__image" />
         </div>
         <p class="question-container__question">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit?
-        </p>
+        </p> -->
       </div>
+      <button class="question__button">Next Question!</button>
     </section>
     <section class="answers">
       <div class="answers-container">
-        <p class="answers-container__total-score">
+        <!-- <p class="answers-container__total-score">
           Your total score: 5/10 points
         </p>
         <p class="answers-container__last-score">2 points for the last guess</p>
-        <button class="answers-container__answer">A</button>
-        <button class="answers-container__answer">B</button>
-        <button class="answers-container__answer">C</button>
-        <button class="answers-container__answer">D</button>
+        <button class="answers-container__answer"></button>
+        <button class="answers-container__answer"></button>
+        <button class="answers-container__answer"></button>
+        <button class="answers-container__answer"></button> -->
       </div>
     </section>
     <script type="module" src="/src/main.ts"></script>
