changed score style

--- a/index.html
+++ b/index.html
@@ -19,27 +19,12 @@
       <button class="rules__button">Let's Play!</button>
     </section>
     <section class="question">
-      <div class="question-container">
-        <!-- <div class="question-container__image">
-          <img src="#" alt="#" class="question-container__image" />
-        </div>
-        <p class="question-container__question">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit?
-        </p> -->
-      </div>
+      <div class="question-container"></div>
+      <p class="question__score"></p>
       <button class="question__button">Next Question!</button>
     </section>
     <section class="answers">
-      <div class="answers-container">
-        <!-- <p class="answers-container__total-score">
-          Your total score: 5/10 points
-        </p>
-        <p class="answers-container__last-score">2 points for the last guess</p>
-        <button class="answers-container__answer"></button>
-        <button class="answers-container__answer"></button>
-        <button class="answers-container__answer"></button>
-        <button class="answers-container__answer"></button> -->
-      </div>
+      <div class="answers-container" style="display: none"></div>
     </section>
     <script type="module" src="/src/main.ts"></script>
   </body>
