added restart button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <header class="header">
       <h1 class="header__title">GuessIt</h1>
+      <button class="header__restart-button">Restart</button>
     </header>
     <section class="rules">
       <p class="rules__description">
