updated README.md and html

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         </li>
         <li>
           <strong>Subject Selection:</strong><br />
-          You can choose between two subjects: 'population' or 'land area'. This
-          allows you to focus on your preferred area of knowledge.
+          You can choose between two subjects: 'Countries Population' or
+          'Countries Land Area'. This allows you to focus on your preferred area
+          of knowledge.
         </li>
         <li>
           <strong>Answer Selection:</strong><br />
