changed random answer generator

--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
         </li>
         <li>
           <strong>Answer Selection:</strong><br />
-          Each question will present 4 possible answers, but it's important to
-          note that the correct answer may not always be among the randomly
-          selected choices.
+          Each question will offer 4 potential answers, and your task is to
+          select the correct one.
         </li>
         <li>
           <strong>Scoring System:</strong><br />
